Bug 156870 - [css-grid] Fix bug with positioned items in vertical writing mode
Summary: [css-grid] Fix bug with positioned items in vertical writing mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Manuel Rego Casasnovas
URL:
Keywords: BlinkMergeCandidate
Depends on:
Blocks: 60731
  Show dependency treegraph
 
Reported: 2016-04-21 14:17 PDT by Manuel Rego Casasnovas
Modified: 2016-04-22 00:54 PDT (History)
8 users (show)

See Also:


Attachments
Patch (8.25 KB, patch)
2016-04-21 14:20 PDT, Manuel Rego Casasnovas
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Rego Casasnovas 2016-04-21 14:17:29 PDT
If we use border in the grid container and positioned items in vertical writing mode, the items are not placed in the right position.

The issue is that in RenderGrid::offsetAndBreadthForPositionedChild() we are using borderLeft().

This is a port of: https://codereview.chromium.org/1909153002/
Comment 1 Manuel Rego Casasnovas 2016-04-21 14:20:43 PDT
Created attachment 276959 [details]
Patch
Comment 2 WebKit Commit Bot 2016-04-22 00:54:02 PDT
Comment on attachment 276959 [details]
Patch

Clearing flags on attachment: 276959

Committed r199874: <http://trac.webkit.org/changeset/199874>
Comment 3 WebKit Commit Bot 2016-04-22 00:54:06 PDT
All reviewed patches have been landed.  Closing bug.